postgresql-common (43) unstable; urgency=low

  *

 -- Martin Pitt <mpitt@debian.org>  Mon,  6 Feb 2006 23:45:37 +0100

postgresql-common (42) unstable; urgency=low

  * PgCommon.pm, change_ugid(): Implement initgroups() like behaviour to allow
    running the postmaster in auxiliary groups. This is necessary for e. g.
    reading shared SSL certificates.
  * t/TestLib.pm, exec_as(): Also change group id, in order to be able to read
    SSL certificates which are only group readable (which previously caused
    the test suite to fail).
  * debian/supported-versions: Add lsb_release output case 'unstable' to cope
    with recent lsb-release change. Closes: #351475

 -- Martin Pitt <mpitt@debian.org>  Sun,  5 Feb 2006 12:36:53 +0000

postgresql-common (41) unstable; urgency=low

  * pg_createcluster: Make the definition of 'cluster already exists' less
    strict: check for files that indicate a cluster configuration instead of
    requiring the directory to be completely empty.
  * debian/maintscripts-functions, configure_version(): Improve check for
    already existing clusters to not catch subdirectories with non-cluster
    files (e. g. a single *.old and similar).
  * pg_ctlcluster: Add option -o to pass parameters to the postmaster process.
  * debian/postgresql-common.postinst: Avoid error message from ls if
    /usr/lib/postgresql does not exist.
  * PgCommon.pm, cluster_info(): Respect log_{directory,filename} settings;
    only use Debian's log directory if neither is set. Thanks to Scott Chapman
    for discovering this issue.
  * pg_ctlcluster: Create the log file if it does not yet exist; this ensures
    that we always know the file postmaster really uses and avoids the race
    condition with nonexisting files if log_filename contains time macros.
  * pg_createcluster: Explain possibility of overriding the log symlink with
    log_* in postgresql.conf.
  * architecture.html: Fix some typos, remove obsolete pg_upgradecluster
    procedure.
